Fix main page button alignment

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ header .icon {
 }
 
 .main-cover .cover-float button {
-    margin-right: 20px;
+    margin: 10px;
 }
 
 .main-footer {
